# DevContainerCpp

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
.devcontainer/devcpp-jammy-x86_64/: Dockerfile
.devcontainer/devcpp-noble-x86_64/: Dockerfile
.devcontainer/myproject-noble-x86_64/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/myproject-raccoon-x86_64/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/wpostgres-noble-x86_64/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/wpostgres-raccoon-x86_64/: Dockerfile  docker-compose.yml
db/: init.sql
dependencies/: install-dependencies.sh
include/dblib/: DBUtil.hpp
include/hellolib/: BaseAnimal.hpp  Cow.hpp  IAnimal.hpp
src/dblib/: CMakeLists.txt  DBUtil.cpp
src/helloapp/: CMakeLists.txt  main.cpp
src/hellolib/: BaseAnimal.cpp  CMakeLists.txt  Cow.cpp
test/: CMakeLists.txt  testCow.cpp
